Use idx instead of index. This resolves some problems. I will also have a look on how to automatically update the widget positions when the filter changes, for instance. For now, as before, you need to do something like:

connect(lineEdit, SIGNAL(textChanged(const QString&)), proxyModel, SLOT(invalidate()));

BUG: 171991

svn path=/trunk/KDE/kdelibs/; revision=883321